--- a/friendly.css
+++ b/friendly.css
@@ -13,7 +13,6 @@
 		display: inline-block;
 		color: navy;
 		font-family: 'Roboto Condensed', sans-serif;
-		padding-top: 80px;
 	}
 	h1 {
 		font-size: 60px;
@@ -26,7 +25,13 @@
 	}
 	.profile{
 		float: right;
-		width: 40%;
+		width: 30%;
+	}
+	.odd {
+		float: right;
+	}
+	.even {
+		float: left;
 	}
 }
 
