--- a/friendly.css
+++ b/friendly.css
@@ -2,9 +2,6 @@
 	padding-left: 10px;
 	padding-top: 10px;
 }
-h2 {
-	font-family: 'Roboto Condensed', sans-serif;
-}
 
 @media screen and (min-width: 501px) {
 	p {
@@ -13,29 +10,28 @@ h2 {
 	.contact {
 		border: 15px solid navy;
 		margin: 15px;
+		display: inline-block;
 		color: navy;
+		font-family: 'Roboto Condensed', sans-serif;
 	}
 	h1 {
 		font-size: 60px;
 		font-family: 'Bonbon', cursive;
-		color: navy;
+		color: white;
+		position: fixed;
+		width: 100%;
+		background: navy;
+		top: 0px;
 	}
-	.even {
-		float: left;
-		width: 50%;
+	.profile{
+		float: right;
+		width: 30%;
 	}
 	.odd {
 		float: right;
-		width: 50%;
 	}
-	.usernames {
-		 padding: 1em;
-  -moz-column-count: 2;
-  -moz-column-gap: 1em;
-  -webkit-column-count: 2;
-  -webkit-column-gap: 1em;
-  column-count: 2;
-  column-gap: 1em;
+	.even {
+		float: left;
 	}
 }
 
@@ -65,6 +61,7 @@ h2 {
 	.contact {
 		border: 10px solid white;
 		margin: 8%;
+		font-family: 'Roboto Condensed', sans-serif;
 	}
 	.grow:hover
 	{
